# gmail-n8n-automation

./: .dockerignore  .env.example  .gitignore  Dockerfile  PLAN.md  README.md  cleanup-all.sh  finish-deploy.sh  fix-wf4-url.py  fix-wf4.sh  fly.toml  package-lock.json  package.json  pyproject.toml
docs/: WORKFLOW-FIXES.md  implementation-plan.md
exports/: export-RYXfQYtii4ZheW6e.json  export-Zreh7ckPNiNYpbju.json  export-wf53e3ea8abf28.json  export-wfdf03924d1afc.json
fly/: fly.toml  setup.sh
scripts/: check-execs.mjs  check-wf0.mjs  check-wf4-execs.mjs  compare-gmail.mjs  compare-wf.mjs  find-cred.mjs  list-all.mjs  run-cleanup.sh  run-wf4-cleanup.mjs  trigger-check.mjs
src/: auth_web.py  config.py  generate-cleanup-workflow.ts  main.py  web.py
src/classifier/: correction_learner.py  llm_classifier.py  pipeline.py  pre_classifier.py
src/code/: account-config.test.ts  account-config.ts  classifier.test.ts  classifier.ts  index.ts  initial-cleanup.test.ts  initial-cleanup.ts  label-mapper.test.ts  label-mapper.ts  payload-builder.test.ts  payload-builder.ts  pre-classifier.test.ts  pre-classifier.ts  spam-deleter.test.ts  spam-deleter.ts  webhook-schema.ts
src/gmail/: auth.py  client.py  labels.py
src/graph/: nodes.py  state.py  workflow.py
src/persistence/: schema.py  tracker.py
src/scheduler/: cleanupper.py  poller.py  spam_deleter.py
src/utils/: env.test.ts  env.ts  error-handler.test.ts  error-handler.ts  index.ts  n8n-templates.ts  rate-limiter.test.ts  rate-limiter.ts  validate-workflows.ts
src/workflows/: wf0-shared-classifier.json  (+8 more)
