[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "emailbot"
version = "1.0.0"
description = "Gmail AI classifier using LangChain + LangGraph"
requires-python = ">=3.9"
dependencies = [
    "langgraph>=0.3.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.3.0",
    "google-api-python-client>=2.0.0",
    "google-auth-oauthlib>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "typer>=0.12.0",
    "tenacity>=8.0.0",
    "beautifulsoup4>=4.12.0",
    "markdownify>=0.3.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "httpx>=0.27.0",
]

[project.scripts]
emailbot = "src.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src"]
